<resources>
    <string name="app_name">vkrapp</string>
    <string name="title_read">Чтение</string>
    <string name="title_write">Запись</string>
    <string name="dialog_text_tag">Коснитесь меткой</string>
    <string name="save_tag">Сохранить метку</string>
    <string name="title_pass">Корзина</string>
    <string name="title_receipt">Чеки</string>
    <string name="title_bonus">Бонусы</string>
    <string name="pass_text">Корзина пока пустая</string>
    <string name="pass_all_price">Общая стоимость: </string>
    <string name="pass_date">Время: </string>
    <string name="title_main">Главная</string>
    //
    <string name="pass_success">Вы выполнили вход</string>
    <string name="pass_basket">Ваши покупки</string>
    <string name="write_success">Сообщение сохранено</string>
    <string name="write_error">Не удалось сохранить сообщение. Попробуйте ещё раз</string>
    <string name="read_empty">Пустая или неисправная метка</string>
    <string name="nfc_disabled">Включите NFC в настройках</string>
    <string name="msg_empty">Сообщение не может быть нулевым</string>
    //
    <string name="service_item_draw_menu">Внутренняя кухня</string>
    <string name="username">Тони Монтана</string>
    <string name="login">+79672691727</string>
    <string name="username_main">Привет, Тони</string>
    //Content Description
    <string name="cd_user_logo">Аватар</string>
    <string name="cd_promo_img">Акции</string>
    <string name="cd_receipt_item_img">Лого магазина</string>
    //
    <string name="main_receipt_count">1206₽</string>
    <string name="main_receipt_tv">Прошлый чек</string>
    <string name="main_bonus_count">589</string>
    <string name="receipt_item">Итого:</string>
    <string name="receipt_address">7-я Парковая, 9/26</string>
    <string name="receipt_add_price">Добавьте цену</string>
    <string name="receipt_add_time">Время добавится автоматически</string>
    <string name="receipt_add_tv">Список товаров</string>
    <string name="receipt_add_title">О чеке</string>
    <string name="receipt_delete">Удалить чек</string>
    <string name="receipt_all_delete">Удалить все чеки</string>
    <string name="null_error">Данные необходимо ввести</string>
    <string name="added_error">Нужно нажать изменить чек</string>
    <string name="edit_error">Нужно нажать добавить чек</string>
    <string name="delete_error">Нужно выбрать чек из списка</string>
    //
    <string name="promo1">2+1</string>
    <string name="promo2">+50</string>
    <string name="promo3">-9%</string>
    <string name="promo4">149</string>
    <string name="promo1s">На напитки и воду в жару</string>
    <string name="promo2s">Баллов нашим частым гостям</string>
    <string name="promo3s">На категорию "Вкусный Хлеб"</string>
    <string name="promo4s">За уголь для шашлыка</string>
    <string name="kitkat">kitkat</string>
    //
    <string name="bonus_add">Добавлено: </string>
    <string name="bonus_all">Всего: </string>
    <string name="bonus_counter"> баллов</string>
    <string name="login_hello">Привет!</string>
    <string name="sign_in_with_google">Войти с Google</string>
    <string name="error_sign_in">Войти не удалось</string>
    <string name="basket_title">Управление корзиной</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="catalog_title">Каталог</string>
    <string name="catalog_promo">Спецпредложения</string>
    <string name="catalog_tv">Товары</string>
    <string name="ar_title">AR-Режим</string>

</resources>