<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:id="@+id/navigation_main"
            android:title="@string/title_main" />
        <item
            android:icon="@drawable/ic_pass"
            android:id="@+id/navigation_pass"
            android:title="@string/title_pass" />
        <item
            android:icon="@drawable/ic_receipt"
            android:id="@+id/navigation_receipt"
            android:title="@string/title_receipt" />
        <item
            android:icon="@drawable/ic_bonuses"
            android:id="@+id/navigation_bonus"
            android:title="@string/title_bonus" />

    </group>

    <item android:title="@string/service_item_draw_menu">
        <menu>
            <item
                android:icon="@drawable/ic_read"
                android:id="@+id/navigation_first"
                android:title="@string/title_read" />
            <item
                android:icon="@drawable/ic_write"
                android:id="@+id/navigation_second"
                android:title="@string/title_write" />
        </menu>
    </item>

</menu>