<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host_fragment"
    app:startDestination="@id/navigation_main">

    <fragment
        android:id="@+id/navigation_first"
        android:name="com.android.mpdev.vkrapp.ui.firstScreen.FirstFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_first"/>
    <fragment
        android:id="@+id/navigation_second"
        android:name="com.android.mpdev.vkrapp.ui.secondScreen.SecondFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_second"/>
    <fragment
        android:id="@+id/navigation_pass"
        android:name="com.android.mpdev.vkrapp.ui.pass.PassFragment"
        android:label="@string/title_pass"
        tools:layout="@layout/fragment_pass" />
    <fragment
        android:id="@+id/navigation_receipt"
        android:name="com.android.mpdev.vkrapp.ui.receipt.ReceiptFragment"
        android:label="@string/title_receipt"
        tools:layout="@layout/fragment_receipt"/>
    <fragment
        android:id="@+id/navigation_bonus"
        android:name="com.android.mpdev.vkrapp.ui.bonus.BonusFragment"
        android:label="@string/title_bonus"
        tools:layout="@layout/fragment_bonus" />
    <fragment
        android:id="@+id/navigation_main"
        android:name="com.android.mpdev.vkrapp.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/navigation_receiptAdd"
        android:name="com.android.mpdev.vkrapp.ui.receipt.ReceiptAddFragment"
        android:label="@string/receipt_add_title"
        tools:layout="@layout/fragment_receipt_add" />
    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.android.mpdev.vkrapp.ui.pass.BasketFragment"
        android:label="@string/basket_title"
        tools:layout="@layout/fragment_basket" />
</navigation>