<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:layout_margin="10dp"
    android:background="@drawable/circle_angle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/receipt_item_date"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:textSize="28sp"
            tools:text="receipt_item_date" />

        <ImageView
            android:id="@+id/receipt_item_img"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/cd_receipt_item_img"
            android:gravity="end"
            app:srcCompat="@mipmap/nfc" />
    </LinearLayout>
    <TextView
        android:id="@+id/receipt_item_id"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom"
        android:textSize="14sp"
        android:text="@string/receipt_address" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/dotted_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/receipt_item"
            android:layout_width="220dp"
            android:layout_height="28dp"
            android:layout_weight="3"
            android:textSize="18sp"
            android:text="@string/receipt_item" />

        <TextView
            android:id="@+id/receipt_item_price"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="price" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp" />
</LinearLayout>