<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_margin="10dp"
    android:background="@drawable/circle_angle"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bonus_item_date"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:textSize="26sp"
            tools:text="bonus_item_date" />

        <ImageView
            android:id="@+id/bonus_item_img"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/cd_receipt_item_img"
            android:gravity="end"
            app:srcCompat="@drawable/ic_plus"
            app:tint="@color/green" />
    </LinearLayout>

    <TextView
        android:id="@+id/bonus_address"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom"
        android:text="@string/receipt_address"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/dotted_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/bonus_add"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bonus_item"
            android:layout_width="220dp"
            android:layout_height="28dp"
            android:layout_weight="3"
            android:gravity="bottom"
            android:textSize="18sp"
            android:textColor="@color/green"
            tools:text="500(+25)" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp" />
</LinearLayout>