<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_user_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="166dp"
        android:contentDescription="@string/cd_user_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/tony" />

    <TextView
        android:id="@+id/main_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="166dp"
        android:text="@string/username_main"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_bonus_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="300dp"
        android:clickable="true"
        android:contentDescription="@string/cd_user_logo"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bonuses"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/main_bonus_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="300dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/main_bonus_count"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_bonus_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="300dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/title_bonus"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_receipt_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="62dp"
        android:clickable="true"
        android:contentDescription="@string/cd_user_logo"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_receipt"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/main_receipt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="62dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/main_receipt_count"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_receipt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="62dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/main_receipt_tv"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_promo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/cd_promo_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/black" />

    <LinearLayout
        android:id="@+id/main_promo_dots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_promo"
        tools:background="@color/gray"/>

    <TextView
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/sidebar_gradient"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_promo_tv"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="226dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="-20%" />

    <TextView
        android:id="@+id/main_promo_tvs"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="62dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="баллов Вам, как частому гостю" />


</androidx.constraintlayout.widget.ConstraintLayout>